@@ -1,5 +1,7 @@
 *SVN*
 
+* Add Range#overlaps?(range), Range#include?(range), and Range#step without a block. [brandon]
+
 * Correct BufferedLogger#level? checks.  #9806 [wildchild, Johan Sorensen]
 
 * String#to_xs uses Eric Wong's fast_xs extension, if available, for Builder speedup.  http://bogomips.org/fast_xs/  [Jeremy Kemper]
